Bug 168317 - Writer markdown export: code blocks are not handled
Summary: Writer markdown export: code blocks are not handled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Markdown
  Show dependency treegraph
 
Reported: 2025-09-08 07:30 UTC by Miklos Vajna
Modified: 2025-09-09 10:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (32 bytes, text/markdown)
2025-09-08 07:30 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-09-08 07:30:38 UTC
Created attachment 202731 [details]
Minimal reproducer

Steps to reproduce the problem:

1. Open the attached file in Writer
2. Save as markdown

Expected result: A multi-paragraph code block in the output.

Actual result: Code block is written as normal text.
Comment 1 Commit Notification 2025-09-09 10:48:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/85aa1402c670e8c85949c5aaf01f529a0a59c05b

tdf#168317 sw markdown export: handle code block

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.